Compiler warning about types